--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,23 +1,31 @@
+<!-- app/views/books/index.html.erb -->
+
 <h1>All Books</h1>
 
+<!-- Flash notice -->
 <% if flash[:notice] %>
   <p style="color: green;"><%= flash[:notice] %></p>
 <% end %>
 
-<%= link_to "Add New Book", new_book_path %>
+<!-- Link to Add a new book -->
+<p>
+  <%= link_to "Add New Book", new_book_path %>
+</p>
 
+<!-- Books table -->
 <table border="1" cellpadding="5">
   <tr>
     <th>Title</th>
     <th>Actions</th>
   </tr>
+
   <% @books.each do |book| %>
     <tr>
       <td><%= book.title %></td>
       <td>
         <%= link_to "Show", book_path(book) %> |
         <%= link_to "Edit", edit_book_path(book) %> |
-        <%= link_to "Delete", book_path(book), method: :delete, data: { confirm: "Are you sure?" } %>
+        <%= link_to "Delete", delete_book_path(book) %>
       </td>
     </tr>
   <% end %>
