Added sunny and rainy day case for adding book

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,12 +1,21 @@
 <h1>Add a New Book</h1>
 
+<% if flash[:notice] %>
+  <p class="notice"><%= flash[:notice] %></p>
+<% end %>
+<% if flash[:alert] %>
+  <p class="alert"><%= flash[:alert] %></p>
+<% end %>
+
 <%= form_with(model: @book, local: true) do |form| %>
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
   </p>
-  <p><%= form.submit "Create Book" %></p>
+
+  <p>
+    <%= form.submit "Create Book" %>
+  </p>
 <% end %>
 
 <%= link_to "Back to Home", books_path %>
-
