Updated to include all attributes

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -12,7 +12,22 @@
     <%= form.label :title %><br>
     <%= form.text_field :title %>
   </p>
+  
+  <p>
+    <%= form.label :author %><br>
+    <%= form.text_field :author %>
+  </p>
 
+  <p>
+    <%= form.label :price %><br>
+    <%= form.number_field :price, step: 0.01 %>
+  </p>
+
+  <p>
+    <%= form.label :published_date %><br>
+    <%= form.date_select :published_date %>
+  </p>
+  
   <p>
     <%= form.submit "Create Book" %>
   </p>
