--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,33 @@
 <h1>Book Details</h1>
 
+<% if flash[:notice] %>
+  <p class="notice"><%= flash[:notice] %></p>
+<% end %>
+<% if flash[:alert] %>
+  <p class="alert"><%= flash[:alert] %></p>
+<% end %>
+
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
 </p>
 
+<p>
+  <strong>Author:</strong>
+  <%= @book.author %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= number_to_currency(@book.price) %>
+</p>
+
+<p>
+  <strong>Published Date:</strong>
+  <%= @book.published_date.strftime("%B %d, %Y") if @book.published_date %>
+</p>
+
 <%= link_to "Back to Home", books_path %> |
 <%= link_to "Edit", edit_book_path(@book) %> |
-<%= link_to "Delete", book_path(@book), method: :delete, data: { confirm: "Are you sure?" } %>
+<%= link_to "Delete", @book, method: :delete, data: { confirm: "Are you sure?" } %>
+
